# edgx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  detectors.py  gui_components.py  pyproject.toml  requirements.txt  run.bat  run_edge_detectors.py  setup.cfg  setup.py  streamlit_app.py  validate_environment.py
.github/workflows/: ci.yml
results/: inverter.py
src/edgx/: __init__.py  detectors.py  gui_components.py  run_edge_detectors.py  streamlit_app.py  validate_environment.py
tests/: test_basic.py  test_detectors.py
tools/: check_all.sh
